# f1telem

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  go.mod
cmd/: testapp.cpp
include/f1telem/: Decoder.hpp  DecoderFactory.hpp  Defines.hpp  Packet.hpp  Reader.hpp  Types.hpp  UDPReader.hpp
include/f1telem/f12020/: Decoder.hpp  Types.hpp
src/f1telem/: Decoder.cpp  UDPReader.cpp
src/f1telem/f12020/: Decoder.cpp
